update swagger for User
